@@ -1,3 +1,9 @@
+2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b14
+
+ * Change: Enhanced function drawSelect2()
+		 - Added list $optionIgnoreAttrs
+		 - Added css for selected and disabled entries
+
 2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b13
 
  * Change: Enhanced function getItemActions()
@@ -8,7 +14,7 @@
 		 - Fixed several wrong conditions
 		 - Added sorting by field 'text'
 
- * 
+ Above Changes are already used in b12 in view_photo.php 
 		
 2007-12-25 Jens Tkotz <jens@peino.de> 1.5.8-svn-b12-UNSTABLE
 
